--- a/styles/style.scss
+++ b/styles/style.scss
@@ -110,7 +110,7 @@ select {
   width: 100%;
   background: rgba(236, 187, 217, 0.75);
   border-radius: 2em;
-  margin: auto;
+  margin: 4em auto 0 auto;
 
   .heart {
     height: 58em;
@@ -213,7 +213,7 @@ select {
 
 .letter {
   max-width: 1600px;
-  margin: auto;
+  margin: 4em auto 0 auto;
   text-align: center;
   padding: 2em;
   display: none;
@@ -230,6 +230,7 @@ select {
   border-radius: 2em;
   max-height: 40em;
   margin: auto;
+  height: fit-content;
 
   h1 {
     width: fit-content;
